# singtown-ai-trainer-classification-transformers

./: .dockerignore  Dockerfile  README.md  classification-20.json  classification-2000.json  mock-task.json  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml
rknn2/: main.py  pyproject.toml
singtown-ai-trainer-classification-transformers/: .gitignore  cache_weight.py  main.py  pyproject.toml
