[project]
name = "rknn2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fast-histogram==0.11",
    "flatbuffers==2.0",
    "numpy==1.23.4",
    "onnx==1.14.0",
    "onnxoptimizer==0.3.8",
    "onnxruntime==1.23.2",
    "opencv-python==4.5.5.64",
    "protobuf==3.20.3",
    "psutil==5.9.0",
    "requests==2.28.1",
    "ruamel-yaml==0.17.21",
    "scipy==1.9.3",
    "singtown-ai==1.9.3",
    "tensorflow==2.8.0",
    "torch==1.13.1",
    "torchvision==0.14.1",
    "tqdm==4.64.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true