[project]
name = "singtown-ai-trainer-classification-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets[vision]>=4.4.1",
    "onnx>=1.20.0",
    "onnxscript>=0.5.6",
    "singtown-ai==1.9.2",
    "timm>=1.0.22",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers[torch]>=4.57.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
